--- a/cocospackage-multi_malivr/cocospackage-config.json
+++ b/cocospackage-multi_malivr/cocospackage-config.json
@@ -1,5 +1,5 @@
 {
-    “malivr":{
+    "malivr":{
         "versions":{
             "mini_cocospackage_version":"0.8.0",
             "show_version": "2.0.0_1.0.0",
